# bAIos

./: .gitignore
.claude-flow/metrics/: performance.json  system-metrics.json  task-metrics.json
cli/: LICENSE  README.md  pyproject.toml  test_script_writing.py
cli/.claude-flow/metrics/: performance.json  task-metrics.json
cli/baios/: __init__.py  main.py
cli/baios/agents/: __init__.py  agent_registry.py  base.py  bill_coordinator.py  mise_master.py  shelldon.py  tzvi_windows.py
cli/baios/commands/: __init__.py  agent.py  check.py
cli/baios/models/: __init__.py  inventory.py
cli/baios/parsers/: __init__.py  inventory_evaluator.py  inventory_parser.py
cli/tests/: README.md  manual_validation_checklist.py  monitor_agent_implementation.py  test_agent_commands.py  test_agent_filesystem.py  test_check_integration.py  test_current_functionality.py
docs/: AI-Dev-Onboarding-Combined-August-13-2025-80988f49-9747.csv  CHECKPOINT1_COMPLETE.md  CHECKPOINT2_COMPLETE.md  INVENTORY.md  PRD.md  architecture.md  checkpoint3_validation.md
docs/session/: PLAN.md
memory/agents/: README.md
memory/memory_bank/: active-context.md  decision-log.md  progress.md
memory/sessions/: README.md
